--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
+    "egg-bcrypt": "^1.1.0",
+    "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.3.1",
     "egg-scripts": "^2.11.0",
     "egg-swagger-doc": "^2.3.2",
-    "egg-swagger-doc-feat": "^2.2.14"
+    "egg-swagger-doc-feat": "^2.2.14",
+    "egg-validate": "^2.0.2",
+    "moment": "^2.29.1",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
