--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-  "extends": "eslint-config-egg"
+  "extends": "eslint-config-egg",
+	//   0表示不不处理，1表示警告，2表示错误并退出
+  "rules": {
+	"no-mixed-spaces-and-tabs": [0, false], //禁止混用tab和空格
+	"no-tabs": "off",
+	"indent": [0, 2],//缩进风格
+	"object-shorthand": 0//强制对象字面量缩写语法
+  }
 }
