--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "await-stream-ready": "^1.0.1",
+    "axios": "^0.25.0",
     "egg": "^2.15.1",
     "egg-bcrypt": "^1.1.0",
     "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.3.1",
+    "egg-rbac-plugin": "^1.0.6",
     "egg-scripts": "^2.11.0",
     "egg-swagger-doc": "^2.3.2",
     "egg-swagger-doc-feat": "^2.2.14",
